--- a/wechat_mini_program/pages/RC-user-home/index.wxss
+++ b/wechat_mini_program/pages/RC-user-home/index.wxss
@@ -15,7 +15,7 @@
 }
 
 .userinfo-nickname-block {
-  margin: 30rpx 0 0 15rpx;
+  margin: 10px 0 0 8px;
   width: 55%;
   display: flex;
   flex-direction: column;
@@ -50,13 +50,14 @@
 }
 
 .peopleInfo-nickname {
-  margin-bottom: 5px;
+  margin-bottom: 6px;
   font-size: 12px;
   color: #767676;
 }
 
 .peopleInfo-nickname-block {
-  padding: 8px 0 0 0;
+  height: 90%;
+  margin: 0;
   width: 60%;
   display: flex;
   flex-direction: column;
@@ -71,7 +72,7 @@
 }
 
 .people-list-item {
-  padding: 10px 0 0 0;
+  margin: 10px 0 10px 0;
   width: 100%;
   height: 90px;
   display: flex;
@@ -168,7 +169,7 @@
   position: absolute;
   left: 40px;
   right: 40px;
-  top: 180px;
+  top: 15%;
   font-weight: 700;
   font-size: 16px;
 }
