--- a/wechat_mini_program/app.wxss
+++ b/wechat_mini_program/app.wxss
@@ -87,6 +87,10 @@
   background-color: #ffd80d;
 }
 
+.bg-guard {
+  background: #F9F9F9;
+}
+
 .fab {
   display: inline-block;
   padding: 10px 0 0 0;
