--- a/wechat_mini_program/pages/RC-user-profile/index.wxml
+++ b/wechat_mini_program/pages/RC-user-profile/index.wxml
@@ -11,21 +11,21 @@
       <view class='section'>
         <text>100</text>
         <button class="retarget">
-          <image src="./imgs/dollar.svg" class='small-icon'></image>
+          <image src="../imgs/dollar.svg" class='small-icon'></image>
         </button>
       </view>
       <view class='section'>
         <text>8/9</text>
         <button class="retarget">
-          <image src="./imgs/like.svg" class='small-icon'></image>
-          <image src="./imgs/dislike.svg" class='small-icon'></image>
+          <image src="../imgs/like.svg" class='small-icon'></image>
+          <image src="../imgs/dislike.svg" class='small-icon'></image>
         </button>
       </view>
       <view class='section'>
         <text>5/10</text>
         <button class="retarget">
-          <image src="./imgs/progress.svg" class='small-icon'></image>
-          <image src="./imgs/goal.svg" class='small-icon'></image>
+          <image src="../imgs/progress.svg" class='small-icon'></image>
+          <image src="../imgs/goal.svg" class='small-icon'></image>
         </button>
       </view>
     </view>
@@ -43,17 +43,17 @@
       </view>
       <view class='section-vote'>
         <view>
-          <image src="./imgs/like.svg" class='small-icon'></image> {{record.vote}}
+          <image src="../imgs/like.svg" class='small-icon'></image> {{record.vote}}
         </view>
         <view>
-          <image src="./imgs/dislike.svg" class='small-icon'></image> {{record.devote}}
+          <image src="../imgs/dislike.svg" class='small-icon'></image> {{record.devote}}
         </view>
       </view>
     </view>
   </view>
 </view>
 <button class='fab bg-error' bindtap='goToPlan'>
-  <image class='edit-icon' src='./imgs/edit.svg'></image>
+  <image class='edit-icon' src='../imgs/edit.svg'></image>
 </button>
 </view>
 <view style='display: {{showBackdrop}}'>
@@ -61,12 +61,12 @@
   <view class='backdrop-front-content'>
     <icon type="cancel" size="40" color="red" bindtap='backdropMgt' />
     <block wx:if="{{dialogEvent === 'plan'}}">
-      <text class='planning-slogan'>Choose Your Plan, Based On Your Fact ! Click Yellow Button To Save.</text>
+      <text class='planning-slogan'>Set My Goal ! Click Yellow Button To Save.</text>
       <view class="card planning-container bg-light">
         <picker-view indicator-style="height: 50px;" style="width: 100%; height: 300px; border-radius: 10px;" value="{{value}}" bindchange="bindChange">
           <picker-view-column>
             <view wx:for="{{plans}}" style="line-height: 50px; padding-left: 20px;">
-              You Wanna Run {{item}} km
+              I Wanna Run {{item}} km
             </view>
           </picker-view-column>
         </picker-view>
