user join, submit record api intergate

--- a/wechat_mini_program/pages/RC-user-home/index.wxml
+++ b/wechat_mini_program/pages/RC-user-home/index.wxml
@@ -87,7 +87,7 @@
             </view>
           </picker-view-column>
         </picker-view>
-        <button class='like-dislike-button save bg-warning'>
+        <button class='like-dislike-button save bg-warning' bindtap='submitRecord'>
           <image src='../imgs/save.svg'></image>
         </button>
       </view>
