--- a/wechat_mini_program/app.wxss
+++ b/wechat_mini_program/app.wxss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 40rpx 0; 
+  padding: 40rpx 0;
   box-sizing: border-box;
 }
 
@@ -45,11 +45,15 @@
   position: relative;
   overflow: hidden;
   border-radius: 6px;
-  box-shadow: 0 11px 15px -7px rgba(0,0,0,.2), 0 24px 38px 3px rgba(0,0,0,.14), 0 9px 46px 8px rgba(0,0,0,.12);
+  box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2),
+                0 24px 38px 3px rgba(0, 0, 0, 0.14),
+                0 9px 46px 8px rgba(0, 0, 0, 0.12);
 }
 
 .card.sub {
-  box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+                0 6px 10px 0 rgba(0, 0, 0, 0.14),
+                0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
 
 .bg-primary {
@@ -88,7 +92,7 @@
 }
 
 .bg-guard {
-  background: #F9F9F9;
+  background: #f9f9f9;
 }
 
 .fab {
@@ -96,12 +100,14 @@
   padding: 10px 0 0 0;
   position: fixed;
   height: 65px;
-  width:65px;
+  width: 65px;
   right: 10px;
   bottom: 30px;
   border-radius: 50%;
   z-index: 1;
-  box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12); 
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+                0 6px 10px 0 rgba(0, 0, 0, 0.14),
+                0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
 
 .fab image {
@@ -118,4 +124,9 @@
 image.small-icon {
   height: 20px;
   width: 20px;
+}
+
+image.gray {
+  filter: gray;
+  filter: grayscale(100%);
 }
