--- a/wechat_mini_program/pages/RC-user-home/index.wxml
+++ b/wechat_mini_program/pages/RC-user-home/index.wxml
@@ -1,40 +1,45 @@
 <view hidden="{{showBackdrop}}">
 <view class="container">
   <view class="card userinfo user-card-decorator" bindtap='goToMyProfile'>
-    <block wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo">
+    <block wx:if="{{!hasUserInfo}}" open-type="getUserInfo">
     </block>
     <block wx:else>
-      <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+      <image class="userinfo-avatar" src="{{userInfo.icon}}" background-size="cover"></image>
       <view class="userinfo-nickname-block">
         <text class="userinfo-nickname decorator">{{userInfo.nickName}}</text>
         <view class="userinfo-nickname">
           <image class='small-icon' src="../imgs/dollar.svg"></image>
-          <text>5</text>
+          <text>{{userInfo.coins}}</text>
         </view>
         <view class="userinfo-nickname">
           <image class='small-icon' src="../imgs/progress.svg"></image>
-          <text>5km</text>
+          <text>{{userInfo.target || 0}}km</text>
         </view>
         <view class="userinfo-nickname">
           <image src="../imgs/like.svg" class='small-icon'></image>
           <image src="../imgs/dislike.svg" class='small-icon'></image>
-          <text>8/9</text>
+          <text>{{userInfo.likes || 0}}/{{userInfo.dislikes  || 0}}</text>
         </view>
-        <view style='width: 80%;' class="bg-warning progress"></view>
+        <view style='width: {{((user.current || 0) / (user.target || 1)) > 1 ? 100 : ((user.current || 0) / (user.target || 1) * 100)}} %;' class="bg-{{userInfo.color}} progress"></view>
       </view>
     </block>
   </view>
-  <view class="people-list card bg-light" bindtap='goToVote'>
-    <view class="people-list-item divider" wx:for="{{users}}" wx:for-item="user" wx:key="user.id">
+  <view class="people-list card bg-light">
+    <view class="people-list-item divider"
+      wx:for="{{users}}" 
+      wx:for-item="user" 
+      wx:key="user.id"
+      data-user="{{user}}"
+      bindtap='goToVote'>
       <block>
-        <image class="peopleInfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+        <image class="peopleInfo-avatar" src="{{user.icon || iconph}}" background-size="cover"></image>
       </block>
       <block>
         <view class="peopleInfo-nickname-block">
           <text class="peopleInfo-nickname">{{user.nickName}}</text>
           <text class="peopleInfo-nickname">Coins: {{user.coins}} </text>
-          <text class="peopleInfo-nickname">Goal/Current: 10/9</text>
-          <view style='width: {{user.current / user.target * 100}}%;' class="bg-{{user.color}} progress">
+          <text class="peopleInfo-nickname">Goal/Current: {{user.current || 0}}/{{user.target || 0}}</text>
+          <view style='width: {{((user.current || 0) / (user.target || 1)) > 1 ? 100 : ((user.current || 0) / (user.target || 1)  * 100)}}%;' class="bg-{{user.color}} progress">
           </view>
         </view>
       </block>
@@ -65,14 +70,14 @@
   <view class='backdrop'></view>
   <view class='backdrop-front-content'>
     <block wx:if="{{dialogEvent === 'vote'}}">
-      <text class='voting-slogan'>Double Tap Thumb Up Or Thumb Down To Vote For Your Mates, With Love !</text>
+      <text class='voting-slogan'>Double Tap Thumb Up Or Thumb Down To Vote For Your Mates, With Love !\n Gray Icon Is Your Current Choice !</text>
       <icon type="cancel" size="40" color="red" bindtap='backdropMgt' />
       <view class="card voting-container bg-warning">
-        <button class='like-dislike-button'>
-          <image src='../imgs/like.svg'></image>
+        <button class='like-dislike-button' bindtap='doubleTap' data-action="like">
+          <image src='../imgs/like.svg' class='{{liked ? "gray" : "" }}'></image>
         </button>
-        <button class='like-dislike-button'>
-          <image src='../imgs/dislike.svg'></image>
+        <button class='like-dislike-button' bindtap='doubleTap' data-action="dislike">
+          <image src='../imgs/dislike.svg' class='{{disliked ? "gray" : "" }}'></image>
         </button>
       </view>
     </block>
@@ -80,7 +85,7 @@
       <text class='voting-slogan'>Type In My Newest Achievement !</text>
       <icon type="cancel" size="40" color="red" bindtap='backdropMgt' />
       <view class="card marking-container bg-light">
-        <picker-view indicator-style="height: 50px;" style="width: 100%; height: 300px; border-radius: 10px;" value="{{value}}" bindchange="bindChange">
+        <picker-view indicator-style="height: 50px;" style="width: 100%; height: 300px; border-radius: 10px; font-weight: 600;" value="{{value}}" bindchange="bindChange">
           <picker-view-column>
             <view wx:for="{{achievements}}" style="line-height: 50px; padding-left: 20px;">
               I Just Run {{item}} km
