--- a/wechat_mini_program/pages/RC-user-report/index.wxml
+++ b/wechat_mini_program/pages/RC-user-report/index.wxml
@@ -1,19 +1,20 @@
 <view class="container">
   <block wx:for="{{weekRecords}}" wx:key="id" wx:for-item="record">
     <view class='record-range-container'>
-      {{record.range}}
+      {{range}}
     </view>
     <view class='people-list card bg-warning'>
       <view class='people-list-item divider' wx:for="{{record.record}}" wx:key="id" wx:for-item="rc">
-        <block>
-          <image class="peopleInfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-        </block>
+        <view class='peopleInfo-avatar-container'>
+          <image class="peopleInfo-avatar" src="{{rc.icon || iconPh}}" background-size="cover"></image>
+           <text class='vote-icon-align unit'>{{ util.sub(rc.nickName) }}</text> 
+        </view>
         <view class='achievements-container'>
           <view class="date-container">
             <view class='date' wx:for="{{rc.achievements}}" wx:key="id" wx:for-item="ach">{{ach}}</view>
           </view>
           <view class='bar-chart-container'>
-            <view class='bar bg-light-primary card sub' wx:for="{{rc.achievements}}" wx:key="id" wx:for-item="ach" style='height: {{ach / 10 * 100}}%'>
+            <view class='bar bg-light-primary card sub' wx:for="{{rc.achievements}}" wx:key="id" wx:for-item="ach" style='height: {{ ach >= 15 ? 100 : (ach / 15 * 100)}}%'>
             </view>
           </view>
         </view>
@@ -29,3 +30,12 @@
     </view>
   </block>
 </view>
+
+
+
+<wxs module="util">
+    var sub = function(val) {
+        return val.substring(0, 7)
+    }
+    module.exports.sub = sub;
+</wxs>
