--- a/wechat_mini_program/pages/RC-user-report/index.wxss
+++ b/wechat_mini_program/pages/RC-user-report/index.wxss
@@ -21,6 +21,12 @@
   align-items: left;
 }
 
+.peopleInfo-avatar-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .peopleInfo-avatar {
   width: 80rpx;
   height: 80rpx;
@@ -79,7 +85,7 @@
 }
 
 .vote-icon-align.unit {
-  font-size: 12px;
+  font-size: 10px;
   height: 30%;
   color: #767676;
 }
