--- a/wechat_pmt_QA/pages/RC-user-home/index.wxml
+++ b/wechat_pmt_QA/pages/RC-user-home/index.wxml
@@ -85,7 +85,7 @@
   <view class='backdrop'></view>
   <view class='backdrop-front-content'>
     <block wx:if="{{dialogEvent === 'vote'}}">
-      <text class='voting-slogan'>Double Tap Thumb Up Or Thumb Down To Vote For Your Mates, With Love !\n Gray Icon Is Your Current Choice !</text>
+      <text class='voting-slogan'>Double tap thumb up or thumb down to vote or change vote \n Gray icon is your current choice !</text>
       <icon type="cancel" size="40" color="red" bindtap='backdropMgt' />
       <view class="card voting-container bg-warning">
         <button class='like-dislike-button' bindtap='doubleTap' data-action="like">
@@ -98,8 +98,8 @@
     </block>
     <block wx:if="{{dialogEvent === 'mark'}}">
       <text class='voting-slogan'>
-     You Can Only Record Once In An Hour ! \n
-       \t The Latest One Will Be Accepted If You Save Twice</text>
+     You can only record once in an hour ! \n
+       \t The latest one will be accepted if you save twice or more</text>
       <icon type="cancel" size="40" color="red" bindtap='backdropMgt' />
       <view class="card marking-container bg-light">
         <picker-view indicator-style="height: 50px;" style="width: 100%; height: 300px; border-radius: 10px; font-weight: 600;" value="{{value}}" bindchange="bindChange">
