--- a/wechat_mini_program/pages/RC-user-home/index.wxml
+++ b/wechat_mini_program/pages/RC-user-home/index.wxml
@@ -2,6 +2,8 @@
 <view class="container">
   <view class="card userinfo user-card-decorator" bindtap='goToMyProfile'>
     <block wx:if="{{!hasUserInfo}}" open-type="getUserInfo">
+        <button type="primary" catchtap="primary" open-type='getUserInfo' bindgetuserinfo='getUserInfobywx'> Please  click it to allow 
+        get User Info </button>
     </block>
     <block wx:else>
       <image class="userinfo-avatar" src="{{userInfo.icon}}" background-size="cover"></image>
@@ -84,7 +86,7 @@
   <view class='backdrop'></view>
   <view class='backdrop-front-content'>
     <block wx:if="{{dialogEvent === 'vote'}}">
-      <text class='voting-slogan'>Double Tap Thumb Up Or Thumb Down To Vote For Your Mates, With Love !\n Gray Icon Is Your Current Choice !</text>
+      <text class='voting-slogan'>Double tap thumb up or thumb down to vote or change vote \n Gray icon is your current choice !</text>
       <icon type="cancel" size="40" color="red" bindtap='backdropMgt' />
       <view class="card voting-container bg-warning">
         <button class='like-dislike-button' bindtap='doubleTap' data-action="like">
@@ -96,7 +98,9 @@
       </view>
     </block>
     <block wx:if="{{dialogEvent === 'mark'}}">
-      <text class='voting-slogan'>Type In My Newest Achievement !</text>
+      <text class='voting-slogan'>
+     You can only record once in an hour ! \n
+       \t The latest one will be accepted if you save twice or more</text>
       <icon type="cancel" size="40" color="red" bindtap='backdropMgt' />
       <view class="card marking-container bg-light">
         <picker-view indicator-style="height: 50px;" style="width: 100%; height: 300px; border-radius: 10px; font-weight: 600;" value="{{value}}" bindchange="bindChange">
