--- a/wechat_mini_program/pages/RC-user-profile/index.wxml
+++ b/wechat_mini_program/pages/RC-user-profile/index.wxml
@@ -66,7 +66,7 @@
         <picker-view indicator-style="height: 50px;" style="width: 100%; height: 300px; border-radius: 10px; font-weight: 600;" value="{{value}}" bindchange="bindChange">
           <picker-view-column>
          
-            <view wx:for="{{plans}}" style="line-height: 50px; padding-left: 20px;">
+            <view wx:for="{{plans}}" wx:key="index" style="line-height: 50px; padding-left: 20px;">
                <view wx:if="{{item==0}}">
                   Ask For Leave
                </view>
